#:tombi schema.strict = false
# SPDX-FileCopyrightText: 2025 Knitli Inc.
# SPDX-FileContributor: Adam Poulemanos <adam@knit.li>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[project]
# It seems 'codeweaver' is too similar to 'codeweave' on PyPI, so we use 'code-weaver' as the package name
name = "code-weaver"
description = "Extensible MCP server for semantic code search with plugin architecture supporting multiple embedding providers, vector databases, and data sources."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = "MIT OR Apache-2.0"
license-files = [
  "./LICENSE-Apache-2.0",
  "./LICENSE-MIT",
  "LICENSES/Apache-2.0.txt",
  "LICENSES/MIT.txt",
]
authors = [
  { name = "Knitli Inc." },
  { name = "Adam Poulemanos", email = "adam@knit.li" },
]
keywords = [
  "agents",
  "ai",
  "anthropic",
  "artificial intelligence",
  "ast-grep",
  "azure",
  "bedrock",
  "claude",
  "code analysis",
  "code embeddings",
  "code indexing",
  "code intelligence",
  "code search",
  "code understanding",
  "codebase",
  "codebase analysis",
  "codebase management",
  "cohere",
  "docarray",
  "embedding",
  "embeddings",
  "extensible",
  "fastembed",
  "fastmcp",
  "framework",
  "genai",
  "google",
  "grok",
  "groq",
  "huggingface",
  "hybrid search",
  "information retrieval",
  "large language models",
  "llama",
  "llms",
  "mcp",
  "mcp protocol",
  "mcp server",
  "mistral",
  "model context protocol",
  "natural language processing",
  "nlp",
  "openai",
  "perplexity",
  "platform",
  "plugin architecture",
  "pydantic",
  "pydantic-ai",
  "qdrant",
  "rerank",
  "retrieval",
  "search",
  "semantic search",
  "sentence transformers",
  "tree-sitter",
  "vector",
  "vector database",
  "vector embeddings",
  "vector search",
  "vector store",
  "voyageai",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Database",
  "Topic :: Database :: Database Engines/Servers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Indexing",
  "Topic :: Utilities",
  "Typing :: Typed",
]
# `dependencies` and `optional-dependencies` are populated at build time by
# the uv-dynamic-versioning metadata hook (see
# [tool.hatch.metadata.hooks.uv-dynamic-versioning] below). Templating only
# the workspace sibling lines (`code-weaver-daemon`, `code-weaver-tokenizers`)
# with `=={{ version }}` keeps every published wheel pinned to the same VCS-
# derived version with zero hand-maintained version strings.
dynamic = ["dependencies", "optional-dependencies", "version"]

[project.urls]
Changelog = "https://github.com/knitli/codeweaver/blob/main/CHANGELOG.md"
# Documentation = "https://dev.knitli.com/codeweaver" not live yet
Homepage = "https://knitli.com"
Issues = "https://github.com/knitli/codeweaver/issues"
Repository = "https://github.com/knitli/codeweaver"

[project.scripts]
codeweaver = "codeweaver.cli.__main__:main"
cw = "codeweaver.cli.__main__:main"

# [project.optional-dependencies] is populated dynamically — see
# [tool.hatch.metadata.hooks.uv-dynamic-versioning.optional-dependencies] below.

[dependency-groups]
# `dev` is the composed contributor group: lint + test + helpers + a couple of dev-only tools.
# Use `uv sync --group dev` to get everything needed for local development.
dev = [
  "serena>=0.9.1",
  "uv>=0.11.3",
  { include-group = "dev-helpers" },
  { include-group = "lint" },
  { include-group = "test" },
]
build = [
  "hatchling>=1.29.0",
  "uv-dynamic-versioning>=0.14.0",
  { include-group = "docs" },
]
dev-helpers = [
  "ipython>=9.12.0",
  "jsonlines>=4.0.0",
  "memory-profiler>=0.61.0",
  "pdbpp>=0.12.1",
  "pyperclip>=1.11.0",
  "superclaude>=4.3.0",
]
docs = [
  "griffe>=2.0.2",
  "griffe-pydantic>=1.3.1",
  "griffe2md>=1.5.0",
]
# Linting/formatting/typecheck — the minimum a contributor needs to pass `mise run check`.
lint = [
  # black is used to format generated code
  "black>=26.3.1",
  "ruff>=0.15.9",
  "ty>=0.0.29",
]
# Baseline test dependencies. Workspace members inherit this group via `uv sync --group test`
# from the workspace root, so daemon/tokenizers no longer redeclare pytest et al.
test = [
  "dirty-equals>=0.11.0",
  "hypothesis>=6.151.11",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
  "pytest-env>=1.6.0",
  "pytest-examples>=0.0.18",
  "pytest-flakefinder>=1.1.0",
  "pytest-mock>=3.15.1",
  "pytest-report>=0.2.1",
  "pytest-timeout>=2.4.0",
]

[build-system]
requires = [
  "hatchling>=1.29.0",
  "uv-dynamic-versioning>=0.14.0",
]
build-backend = "hatchling.build"

# TODO: Integrate hatch plugins for:
#  - readme: https://github.com/hynek/hatch-fancy-pypi-readme

[tool.coverage.run]
concurrency = ["multiprocessing", "thread"]
patch = ["_exit", "subprocess"]
relative_files = true
parallel = true
omit = [
  "*/scripts/*",
  "*/mise-tasks/*",
  "*/tests/*",
  "*/__init__.py",
  "*/__main__.py",
  "*/_version.py",
]

[tool.coverage.report]
skip_empty = true
sort = "-cover"
omit = [
  "*/scripts/*",
  "*/mise-tasks/*",
  "*/tests/*",
  "*/__init__.py",
  "*/__main__.py",
  "*/_version.py",
]
exclude_also = [
  '@(abc\.)?abstractmethod',
  '@(dataclasses\.)?dataclass',
  '@(typing\.)?overload',
  '@(typing\.)?override',
  '@(typing\.)?runtime_checkable',
  '@(typing\.)?type_check_only',
  '[ \t]+?pass\n',
  'class .*\bProtocol\):',
  "def __repr__",
  "if __name__ == .__main__.:",
  "if 0:",
  "if self.debug:",
  "if settings.DEBUG",
  "if TYPE_CHECKING:",
  "no cover: start(?s:.)*?no cover: stop",
  "raise AssertionError",
  "raise NotImplementedError",
  '\s*def .*\)\s*->\s*TypeIs\[.+\]:[\n\sA-za-z0-9_-]+?\n\n',
]

# =============================================================================
# uv-dynamic-versioning metadata hook
# =============================================================================
# This block is the SINGLE SOURCE OF TRUTH for runtime dependencies and
# optional-dependencies. At wheel build time, hatch invokes the
# uv-dynamic-versioning metadata hook, which:
#
#   1. Resolves the project version from git via [tool.uv-dynamic-versioning]
#   2. Substitutes `{{ version }}` (and other Jinja vars) into any line below
#   3. Writes the rendered lists into the wheel METADATA
#
# Only the workspace sibling lines (`code-weaver-daemon`, `code-weaver-tokenizers`)
# are templated. Every other line is plain PEP 508 and passes through unchanged.
# In dev, `[tool.uv.sources]` further down still routes those names to the
# workspace, so editable installs are unaffected.
#
[tool.hatch.metadata.hooks.uv-dynamic-versioning]
# tombi: format.rules.array-values-order.disabled = true
dependencies = [
  # * ================ Core Dependencies ==================*
  "anyio>4.12.0",
  "blake3>=1.0.8",
  # We use some pydantic internal/private utilities in dependency resolution
  # So we pin it to make sure we don't break on minor releases
  "pydantic==2.12.5",
  # for, you know, platform dirs
  "platformdirs>=4.9.4",
  # psutil used for resource governance/limiting by engine
  "psutil>=7.2.2",
  "textcase>=0.4.5",
  "typing_extensions>=4.15.0; python_version < '3.13'",
  "uuid7>=0.1.0; python_version < '3.14'",
  "uvloop>=0.22.1; python_implementation == 'CPython' and platform_system != 'Windows'",
  # * ================ Core Provider Dependencies ==================*
  # tokenizers used by stats, telemetry, and all embed/rerank providers (for stats)
  # no easy way to currently separate out stats-only usage from embedding/rerank usage
  "code-weaver-tokenizers=={{ version }}",
  # numpy needed for all embedding providers
  "numpy>=2.4.4",
  # lazy import handling; spun off from core/utils/lazy_importer into its own package
  "lateimport>=1.0.1",
  # retries
  "tenacity>=9.1.4",
  # for local providers (sentence-transformers, fastembed) to detect CPU/GPU features
  "py-cpuinfo>=9.0.0",
  # * ================ CLI Dependencies ==================*
  "cyclopts>=4.10.1",
  "rich>=14.3.3",
  # * ================ Provider Clients ==================*
  # Provider SDK pins live in their corresponding optional-dependency extras
  # (bedrock, cohere, google, huggingface, mistral, openai). They are pinned
  # there — not here — because their ClientOptions subclasses only need to
  # resolve when the provider itself is selected, not for a base install.
  #
  # Base install ships two clients unconditionally: qdrant (vector store) and
  # pydantic-ai-slim (agent plumbing). Default local embedder is version-gated
  # so exactly one resolves per interpreter:
  #   - fastembed on 3.12/3.13 (blocked on 3.14 by py-rust-stemmers)
  #   - sentence-transformers on 3.14 (no fastembed wheel)
  # Default remote embedder is voyageai on 3.12/3.13 (upstream caps at <3.14).
  "qdrant-client==1.17.1",
  "pydantic-ai-slim>=1.68.0",
  "fastembed==0.7.4; python_version < '3.14'",
  "sentence-transformers==5.2.0; python_version >= '3.14'",
  # voyageai declares requires_python: <3.14 — uv respects this automatically,
  # but pip does not filter by requires_python during install, so we must gate it here.
  "voyageai==0.3.7; python_version < '3.14'",
  # * ================ Indexing and Engine ==================*
  # Also known as: the land of python rust extensions
  # the core code-weaver-daemon package that keeps indexing continuously updated
  "code-weaver-daemon=={{ version }}",
  # performant rust-based file walker with .gitignore support (pyO3 extensions for `ignore` crate)
  "rignore>=0.7.6",
  # performant rust-based file watcher
  "watchfiles>=1.1.1",
  # for semantic indexing, but also required for the Semantic package, unsurprisingly
  # also rust-based.
  "ast-grep-py>=0.40.3",
  # * ================ Server and MCP Server Framework ==================*
  # fastmcp is the core MCP server framework
  "fastmcp>=3.0.0,<4.0.0",
  # just used for types but we need them at runtime for Pydantic models
  "mcp>=1.23.3",
  # Runs the core admin/management server
  "uvicorn[standard]>=0.40.0",
  # * ================ Configuration and Settings ==================*
  # pydantic-settings with toml and yaml support for config files
  "pydantic-settings[toml,yaml]>=2.13.1",  # Pulls: tomli>=2.0.1, pyyaml>=6.0.1
  # For writing toml config files
  "tomli-w>=1.2.0",
  # * ================ Telemetry and Observability ==================*
  # It's telemetry. Our implementation is lightweight and privacy-focused.
  "posthog>=7.9.12",

  #! Not yet used, but planned for future releases
  # * ================ Future Dependencies ==================*
  # for advanced pipeline management and orchestration
  # "pydantic-graph>=1.39.0",
]

[tool.hatch.metadata.hooks.uv-dynamic-versioning.optional-dependencies]
# ==== Providers ====
anthropic = ["pydantic-ai-slim[anthropic]"]
# eunomia middleware - see https://gofastmcp.com/integrations/eunomia-authorization
auth-eunomia = ["eunomia-mcp"]
# ==== Authentication and Authorization Middleware ====
# Optional middleware to add authentication and authorization capabilities to the CodeWeaver server.
# This allows you to secure your CodeWeaver instance with various authentication providers and authorization policies.
# The middleware can be used to enforce access control policies, authenticate users, and manage permissions.
# TODO: Implement authentication and authorization middleware -- should be simple to add
# permit.io middleware - see https://gofastmcp.com/integrations/permit
auth-permitio = ["permit-fastmcp"]
# ==== Authentication and Authorization Middleware/Addons ====
# Settings/Config Secrets
aws-secrets-manager = ["pydantic-settings[yaml,toml,aws-secrets-manager]"]
# does NOT support free-threaded python 3.13 (3.14 is OK) due to cffi dependency in azure-identity
azure-key-vault = ["pydantic-settings[yaml,toml,azure-key-vault]"]
# bedrock carries the raw boto3 pin because our BedrockClientOptions subclass
# depends on boto3's ClientOptions internals staying byte-compatible.
bedrock = ["boto3==1.42.19", "pydantic-ai-slim[bedrock]"]
cohere = ["cohere==5.20.7", "pydantic-ai-slim[cohere]"]
# ==== Data Sources ====
duckduckgo = ["ddgs"]
exa = ["exa-py"]
# fastembed blocked on 3.14 by py-rust-stemmers (no cp314/cp314t wheels)
fastembed = ["fastembed; python_version < '3.14'", "py-cpuinfo"]
# Requires additional setup, see https://qdrant.github.io/fastembed/examples/FastEmbed_GPU/
fastembed-gpu = ["fastembed-gpu; python_version < '3.14'", "py-cpuinfo"]

# Internal extra: the lines shared by both `full` and `full-gpu`. Defined once,
# referenced by both bundles via PEP 621 self-reference. Bumping any version
# here updates both bundles atomically.
#
# Note on the markered pydantic-settings pair:
#   azure-key-vault → azure-identity → cryptography → cffi. On 3.13t
#   (free-threaded), cryptography has no pre-built wheel and building from
#   source requires Rust + cffi<2.0. No PEP 508 marker distinguishes 3.13t
#   from 3.13, so we exclude azure-key-vault on all 3.13. Standard 3.13 users
#   can install azure-identity manually. The _special-dependencies task
#   handles this for non-free-threaded 3.13 builds.
#   permit-fastmcp depends on cffi — same 3.13t issue as azure-key-vault.
common-extras = [
  # Self-reference the per-provider extras so `full` users get the pinned raw
  # SDKs (boto3, cohere, google-genai, huggingface-hub, mistralai, openai)
  # plus the pydantic-ai-slim adapters. Each provider's pin lives exactly once
  # in its own extra.
  "code-weaver[anthropic,bedrock,cohere,google,groq,huggingface,mistral,openai,xai]=={{ version }}",
  "ddgs",
  "eunomia-mcp",
  "exa-py",
  "pydantic-ai-slim[retries]",
  "pydantic-settings[yaml,toml,aws-secrets-manager,gcp-secret-manager]; python_version == '3.13'",
  "pydantic-settings[yaml,toml,aws-secrets-manager,gcp-secret-manager,azure-key-vault]; python_version != '3.13'",
  "permit-fastmcp; python_version != '3.13'",
  "sentence-transformers",
  "tavily-python",
]
full = ["code-weaver[common-extras]=={{ version }}"]
# full-gpu adds fastembed-gpu, which is mutually exclusive with the base
# `fastembed` dep via [tool.uv].conflicts — uv resolves only one.
full-gpu = [
  "code-weaver[common-extras]=={{ version }}",
  "fastembed-gpu; python_version < '3.14'",
  # see note below about why sentence-transformers[onnx-gpu] is commented out
  #  "sentence-transformers[onnx-gpu]; python_version>='3.12' and python_version<'3.14'",
]
gcp-secret-manager = ["pydantic-settings[yaml,toml,gcp-secret-manager]"]
google = ["google-genai==1.56.0", "pydantic-ai-slim[google]"]
gpu-support = [
  "fastembed-gpu; python_version < '3.14'",
  # see note below about why this is commented out
  #  "sentence-transformers[onnx-gpu]; python_version>='3.12' and python_version<'3.14'",
]
groq = ["pydantic-ai-slim[groq]"]
# --- Embedding and Agent Providers --- (no rerank)
huggingface = ["huggingface-hub>=1.0.0", "pydantic-ai-slim[huggingface]"]
# ==== Vector Stores ====
in-memory = ["qdrant-client", "tokenizers"]
mistral = ["mistralai==1.10.0", "pydantic-ai-slim[mistral]"]
# OpenAI includes support for:
#   Cerebras, DeekSeek, Ollama, OpenRouter, Vercel, Perplexity, Moonshot, FireworksAI,
#   TogetherAI, Azure AI Foundry, Heroku, and Github Models
# which all use the OpenAI API
openai = ["openai==2.28.0", "pydantic-ai-slim[openai]"]
qdrant = ["qdrant-client"]
recommended = [
  "fastembed; python_version < '3.14'",
  "sentence-transformers",
  "tokenizers",
  "py-cpuinfo",
  "voyageai; python_version < '3.14'",
  "tavily",
]
recommended-local-only = [
  "fastembed; python_version < '3.14'",
  "sentence-transformers",
  "tokenizers",
  "ddgs",
  "py-cpuinfo",
  # openai for ollama local models
  "pydantic-ai-slim[openai,retries]",
]
sentence-transformers = ["sentence-transformers", "py-cpuinfo"]
tavily = ["tavily"]
# NOTE: Why not GPU or OpenVino support for sentence-transformers?
# The underlying runtimes for these packages, when resolved against our other dependencies,
# essentially require us to choose between support for Python 3.14 and these packages.
# When python 3.14 is included, then the only compatible build results in transformers version 3.x
# Which does not have the `SparseEncoder` class required for sparse-encodings.
# We think the sparse-encoding use case is much broader than GPU or OpenVino acceleration for most users (in fact we always use sparse encodings),
# so we are leaving these out of the official optional dependencies for now.
# If you need GPU or OpenVino support, you can install these packages manually in your environment.
# sentence-transformers-gpu = [
# GPU requires additional setup
#  "sentence-transformers[onnx-gpu]; python_version>='3.12' and python_version<'3.14'",
# ]
# sentence-transformers-openvino = [
#     "sentence-transformers[openvino]",
#     "py-cpuinfo",
# ]
# voyageai self-excludes on 3.14+ via its own requires_python: <3.14,
# but pip doesn't filter on requires_python during install, so we gate here too.
voyageai = ["voyageai; python_version < '3.14'"]
xai = ["pydantic-ai-slim[xai]"]

[tool.hatch.build.hooks.version]
additionalProperties = true
path = "src/codeweaver/_version.py"
# The reuse statements prevent REUSE from considering this snippet for license compliance, which would error
# REUSE-IgnoreStart
template = '''# SPDX-FileCopyrightText: 2025 Knitli Inc.
# SPDX-License-Identifier: MIT OR Apache-2.0
"""Version information for CodeWeaver."""
from typing import Final


__version__: Final[str] = "{version}"

__all__ = ("__version__",)
'''
# REUSE-IgnoreEnd

[tool.hatch.build.targets.wheel]
artifacts = ["*.so", "src/**", "vendored/**", "packages/**"]

[tool.hatch.build.targets.wheel.force-include]
"LICENSES" = "LICENSES"
"typings" = "typings"
"README.md" = "README.md"
"SECURITY.md" = "SECURITY.md"
"sbom.spdx" = "sbom.spdx"
"LICENSE-Apache-2.0" = "LICENSE-APACHE-2.0"
"LICENSE-MIT" = "LICENSE-MIT"
"src/codeweaver" = "codeweaver"
"packages" = "packages"

[tool.hatch.build.targets.sdist]
include = [
  ".gitignore",
  "CHANGELOG.md",
  "CONTRIBUTORS_LICENSE_AGREEMENT.py",
  "LICENSE",
  "LICENSE-APACHE-2.0",
  "LICENSE-MIT",
  "LICENSES",
  "PRIVACY_POLICY.md",
  "README.md",
  "REUSE.toml",
  "SECURITY.md",
  "context7.json",
  "context7.json.license",
  "packages/**",
  "pyproject.toml",
  "sbom.spdx",
  "schema/latest/*",
  "src/**",
  "tests/**",
  "typings/**",
  "uv.lock",
  "uv.lock.license",
  "vendored/**",
]
exclude = [
  ".claude/**",
  ".roo/**",
  ".serena/**",
  ".specify/**",
  ".vscode/**",
  "claudedocs/**",
  "data/**",
  "docker/**",
  "docs-site/**",
  "mise-tasks/**",
  "overrides/**",
  "plans/**",
  "scripts/**",
  "specs/**",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.pytest]
# tombi: format.rules.array-values-order.disabled = true
addopts = [
  # While we don't chase coverage, we want to ensure a minimum bar to catch missing tests
  # We can raise this over time as the project matures
  "--cov-fail-under=50",
  "--cov-report=html",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--cov=codeweaver",
  "--import-mode=importlib",
  "--strict-config",
  "--strict-markers",
  # Exclude resource-intensive tests by default
  # Override with: pytest -m "expensive" or pytest -m "requires_models" to run these tests
  "-ra",
  "-m",
  "not expensive and not requires_models and not requires_gpu and not requires_api_keys",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
  "ignore::UserWarning",
  "ignore::urllib3.exceptions.SystemTimeWarning",
]
markers = [
  "async_test: Asynchronous tests (in addition to pytest.mark.asyncio)",
  # Performance & benchmarks
  "benchmark: Performance benchmark tests",
  # Configuration & environment
  "config: Configuration-related tests",
  # Development & debugging
  "debug: Tests for debugging purposes",
  "dev_only: Tests that should only run in development",
  "docker: Tests that require Docker and Docker Compose (may fail in some CI environments)",
  "e2e: End-to-end tests that test complete workflows",
  # Feature-specific
  "embeddings: Tests related to embedding functionality",
  "env_vars: Tests that depend on environment variables",
  "expensive: Tests taking more than 30 seconds to complete",
  "external_api: Tests that interact with external APIs",
  "fixtures: Tests that heavily rely on pytest fixtures",
  # Stability & reliability
  "flaky: Tests that may occasionally fail due to timing or external factors",
  "indexing: Tests related to code indexing",
  "install_smoke: Minimal smoke tests that must pass on any valid install profile (base, recommended, full, full-gpu, etc.) — used by the install-profile matrix workflow to validate wheel installs across python × extras combinations without requiring the full test suite's optional dependencies",
  "integration: Integration tests that test component interactions",
  # Platform-specific
  "linux_only: Tests that only run on Linux platforms",
  "macos_only: Tests that only run on macOS platforms",
  "mcp: Tests related to MCP protocol functionality",
  "mock_only: Tests that only use mocked dependencies",
  "network: Tests that require network access",
  # Test types
  "parametrize: Parametrized tests with multiple test cases",
  "performance: Performance-related tests",
  "qdrant: Tests that require Qdrant vector database",
  # External dependencies
  "real_providers: Tests using actual embedding/vector store providers (not mocks)",
  "requires_api_keys: Tests requiring external API credentials and authentication",
  "requires_fastembed: Tests requiring fastembed package (not available on Python 3.14+)",
  "requires_gpu: Tests requiring GPU hardware for execution",
  "requires_models: Tests requiring ML model downloads and local model files",
  "requires_voyageai: Tests requiring voyageai package (upstream requires_python caps at <3.14)",
  "retry: Tests that may need retries",
  "search: Tests related to search functionality",
  "server: Tests related to server functionality",
  "services: Tests related to services layer",
  "skip_ci: Tests to skip in CI/CD environments",
  "skip_on_free_threaded: Tests that should be skipped on free-threaded Python builds",
  "skip_on_python_314: Tests that should be skipped on Python 3.14+ due to dependency incompatibilities",
  "slow: Tests that take a significant amount of time to run",
  "telemetry: Tests related to telemetry and metrics",
  "timeout: Tests with specific timeout requirements",
  "timing_sensitive: Tests with strict timing requirements that may be environment-dependent",
  # Test categories
  "unit: Unit tests that test individual components in isolation",
  "validation: Validation tests that ensure system consistency",
  "voyageai: Tests that require VoyageAI API access",
  "windows_only: Tests that only run on Windows platforms",
]
minversion = "9.0"
python_classes = ["Test*"]
python_files = ["*_test.py", "test_*.py"]
python_functions = ["test_*"]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = "600"
timeout_method = "thread"
# Override timeout for specific markers
timeout_func_only = true  # Only apply timeout to test functions, not setup/teardown

[tool.ty.environment]
python-version = "3.12"
root = ["./src", "./tests", "./scripts", "./mise-tasks", "./packages"]
python = "./.venv"
extra-paths = ["./typings"]

[tool.ty.rules]
# === Core Type Safety Rules (kept strict for src/) ===
# These remain as errors by default and will catch real bugs in production code
invalid-method-override = "ignore"  # many false positives here
# === Test Framework Limitations ===
# ty doesn't understand pytest mocks/fixtures - these are inherent limitations, not real bugs
possibly-missing-attribute = "ignore"  # Pytest fixtures don't have static attributes
unresolved-attribute = "warn"  # Test mocks may have dynamic attributes
unknown-argument = "warn"  # Pytest fixtures injected dynamically
unresolved-reference = "warn"  # Test references may be dynamic
# === Type Inference Limitations ===
# ty is overly strict with Literal inference in dict lookups and dynamic patterns
invalid-argument-type = "warn"  # Many false positives in capabilities dicts and code gen
missing-typed-dict-key = "warn"  # Often false positive with dynamic TypedDict construction (e.g., **dict comprehension)
# === Style and Refactoring Suggestions ===
redundant-cast = "ignore"  # Informational only, not bugs
# === Optional Dependencies ===
# Scripts may import optional dependencies (e.g., mkdocs_gen_files, black)
unresolved-import = "warn"  # Downgrade to warn for optional dependencies

[tool.ty.src]
include = ["./src", "./tests", "./scripts", "./mise-tasks", "./packages"]
# Exclude vendored code, typings, and intentionally malformed test fixtures
exclude = ["./typings", "./tests/**/malformed.py", "./vendored"]

# === Per-Directory Overrides ===
# Apply different strictness levels: strict for src/, lenient for scripts/mise-tasks/tests

# Scripts: Code generation, build automation, documentation generation
# These often use dynamic patterns, optional dependencies, and intentional type flexibility
[[tool.ty.overrides]]
include = ["scripts/**/*.py"]

[tool.ty.overrides.rules]
invalid-assignment = "ignore"
missing-typed-dict-key = "ignore"
unresolved-import = "ignore"
invalid-argument-type = "ignore"
unresolved-reference = "ignore"
unresolved-attribute = "ignore"

# Mise Tasks: Build and diagnostic automation
# These are utility scripts with intentional dynamic behavior (e.g., monkey-patching warnings)
[[tool.ty.overrides]]
include = ["mise-tasks/**/*.py"]

[tool.ty.overrides.rules]
invalid-assignment = "ignore"
unresolved-import = "ignore"
invalid-argument-type = "ignore"
unresolved-reference = "ignore"

# Tests: May use pytest fixtures, mocks, and test-specific patterns
# Also may not have test dependencies installed when running ty in dev environment
# Tests can be less exact per the project requirements - focus on src/ strictness
[[tool.ty.overrides]]
include = ["tests/**/*.py"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"  # pytest and other test dependencies may not be installed
unknown-argument = "ignore"  # pytest fixtures inject arguments dynamically
unresolved-reference = "ignore"  # test fixtures and dynamic test patterns
unresolved-attribute = "ignore"  # mocks and fixtures have dynamic attributes
not-subscriptable = "ignore"  # Often false positive after pytest assertions
unsupported-operator = "warn"  # Type narrowing after assertions not always understood
missing-argument = "warn"  # Dynamic test patterns and fixtures
too-many-positional-arguments = "warn"  # Dynamic function calls in tests
invalid-assignment = "ignore"  # Test setup patterns
invalid-argument-type = "ignore"  # Test mocks and fixtures may have dynamic types

[[tool.ty.overrides]]
include = ["src/codeweaver/core/statistics.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
invalid-assignment = "ignore"
invalid-argument-type = "ignore"
invalid-return-type = "ignore"

# Test Fixtures: Intentionally malformed or edge-case test data
# These may have type errors by design to test error handling
[[tool.ty.overrides]]
include = ["tests/fixtures/**/*.py", "tests/unit/engine/test_failover.py"]

[tool.ty.overrides.rules]
invalid-assignment = "ignore"
invalid-argument-type = "ignore"
unresolved-reference = "ignore"

# Specific File Overrides
# These files have known type issues that are either false positives or low priority to fix

[[tool.ty.overrides]]
# All __init__.py files' lazy import patterns cause false positives
include = [
  "src/codeweaver/__init__.py",
  "src/codeweaver/**/__init__.py",
  "src/codeweaver/*/__init__.py",
  "src/codeweaver/*/*/__init__.py",
  "src/codeweaver/*/*/*/__init__.py",
  "src/codeweaver/*/*/*/*/__init__.py",
  "packages/*/__init__.py",
  "packages/*/*/__init__.py",
  "packages/*/*/*/__init__.py",
  "packages/*/*/*/*/__init__.py",
  # there's a similar issue in some of the embedding providers
  "src/codeweaver/providers/embedding/providers/bedrock.py",
  "src/codeweaver/providers/embedding/providers/cohere.py",
  "src/codeweaver/providers/embedding/providers/google.py",
  "src/codeweaver/providers/config/profiles.py"
]

[tool.ty.overrides.rules]
invalid-assignment = "ignore"
invalid-argument-type = "ignore"
unresolved-attribute = "ignore"

[[tool.ty.overrides]]
include = [
  "src/codeweaver/providers/config/clients/multi.py",
  "src/codeweaver/providers/vector_stores/qdrant_base.py",
  "src/codeweaver/providers/config/categories/embedding.py",
  "src/codeweaver/providers/config/categories/sparse_embedding.py",
]

# Both files use `try: import X; except ImportError: X = Any` fallbacks to
# gate optional dependencies (fastembed, torch, sentence-transformers, etc.)
# Ty flags the `X = Any` reassignment as invalid because it narrows the
# previously-declared type. The pattern is intentional and correct — it lets
# pydantic models with `field: X | None = None` work whether or not the
# optional package is installed.
[tool.ty.overrides.rules]
invalid-assignment = "ignore"

[[tool.ty.overrides]]
include = ["scripts/build/generate-mcp-server-json.py"]

[tool.ty.overrides.rules]
unknown-argument = "ignore"

[[tool.ty.overrides]]
include = [
  "src/codeweaver/providers/config/categories/embedding.py",
  "src/codeweaver/providers/config/sdk/embedding.py"
]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
invalid-assignment = "ignore"
call-top-callable = "ignore"
unsupported-operator = "ignore"
missing-typed-dict-key = "ignore"

[[tool.ty.overrides]]
include = [
  "src/codeweaver/providers/vector_stores/qdrant_base.py",
  "src/codeweaver/providers/data/providers.py",
  "src/codeweaver/providers/config/sdk/embedding.py",
  "src/codeweaver/providers/config/sdk/reranking.py",
  "src/codeweaver/providers/config/categories/embedding.py",
  "src/codeweaver/providers/config/categories/vector_store.py",
  "src/codeweaver/providers/data/exa.py",
  "src/codeweaver/*/config/*settings.py"
]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"

[[tool.ty.overrides]]
include = ["src/codeweaver/core/types/aliases.py"]

[tool.ty.overrides.rules]
invalid-newtype = "ignore"

[[tool.ty.overrides]]
include = [
  "src/codeweaver/providers/embedding/providers/*.py",
  "src/codeweaver/providers/reranking/providers/*.py",
  "src/codeweaver/providers/data/*.py",
  "src/codeweaver/engine/services/config_analyzer.py",
  "src/codeweaver/providers/vector_stores/inmemory.py",
]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"

[[tool.ty.overrides]]
include = [
  "src/codeweaver/*/dependencies.py",
  "src/codeweaver/*/dependencies/*.py"
]

# there's an issue with type checkers resolving through the dependency_provider decorators and the dynamic provider registry, which causes false positives in these files
[tool.ty.overrides.rules]
call-non-callable = "ignore"
invalid-await = "ignore"
invalid-argument-type = "ignore"
invalid-return-type = "ignore"
unresolved-attribute = "ignore"

[[tool.ty.overrides]]
include = ["src/codeweaver/core/types/service_cards.py"]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
invalid-return-type = "ignore"
unsupported-operator = "ignore"
no-matching-overload = "ignore"

[[tool.ty.overrides]]
include = [
  "src/codeweaver/__init__.py",
  "src/codeweaver/semantic/classifications.py"
]

[tool.ty.overrides.rules]
invalid-assignment = "ignore"

[[tool.ty.overrides]]
include = ["src/codeweaver/core/di/container.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"

[[tool.ty.overrides]]
include = ["src/codeweaver/semantic/classifier.py"]

[tool.ty.overrides.rules]
missing-argument = "ignore"

[[tool.ty.overrides]]
include = ["src/codeweaver/providers/config/sdk/embedding.py"]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
call-non-callable = "ignore"
invalid-return-type = "ignore"

[tool.uv]
cache-keys = [
  { file = "uv.lock" },
  { file = "pyproject.toml" },
  { dir = "src/codeweaver" },
  { dir = "tests" },
  { dir = "packages" },
]
conflicts = [
  [
    { extra = "full-gpu" },
    { extra = "full" },
  ],
  [
    { extra = "full-gpu" },
    { package = "fastembed" },
  ],
  [
    { extra = "full" },
    { package = "fastembed-gpu" },
  ],
  [
    { extra = "gpu-support" },
    { package = "fastembed" },
  ],
  [
    { package = "fastembed" },
    { package = "fastembed-gpu" },
  ],
]
preview = true
override-dependencies = [
  # cffi 2.0 segfaults on free-threaded 3.13 (sync primitive differences vs 3.14t).
  # No PEP 508 marker distinguishes 3.13t from 3.13, so this applies to both —
  # harmless on standard 3.13 since cryptography has pre-built wheels there.
  "cffi==1.17.1; python_version == '3.13'",
  # Pin cryptography to 45.0.7 on 3.13: its build-system.requires uses cffi>=1.12,
  # compatible with our cffi pin. cryptography 46+ requires cffi>=2.0.0 to build,
  # which conflicts with the cffi<2.0 build constraint needed for 3.13t.
  # On 3.14+, cryptography 46+ resolves naturally (has pre-built wheels + cffi 2.0 works).
  "cryptography==45.0.7; python_version == '3.13'",
]
# Constrain cffi in build isolation environments. override-dependencies only affects
# runtime resolution; when cryptography builds from source on 3.13t, its build env
# pulls cffi>=1.12 independently. This prevents cffi 2.0 from entering build envs.
build-constraint-dependencies = [
  "cffi<2.0; python_version == '3.13'",
]
prerelease = "allow"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
code-weaver-daemon = { workspace = true }
code-weaver-tokenizers = { workspace = true }
boto3-types = { path = "./typings/boto3_types/__init__.pyi" }

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true
dirty = false  # Disabled .dirty suffix to maintain PEP 440 compliance
# tag-branch = "main"  # Commented out to allow building on feature branches
commit-prefix = "g"
# Enable the metadata hook plugin so [tool.hatch.metadata.hooks.uv-dynamic-versioning]
# templates `{{ version }}` into dependencies/optional-dependencies at build time.
metadata = true
